sumo/tests/traci/VariableRetrieval/Junction/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:29:38 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=169 varID=255 objID=1/1
.. Answered with error to command (169), [description: Get Junction Variable: unsupported variable specified]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
